# my-precious-dp

./: .gitignore  ReadMe.md  TEXT FROM DRAFT_1.m4a  Метода ЭКО 29_08_2021.docx  Основной Док Со Стилями.docx
DRAFT_1/: 1_Сравнительный_анализ_аналогичных_систем_(устройств)_0x01.docx  2_обоснование_технических_требований_ведомственной_сети_0x01.docx  3_обоснование_сети.docx  4_обоснование_алгоритма_0x01.docx  Program_draft1.vsdx  Reciever_block_0x01.bak  Reciever_block_0x01.dwg  Sender_block_0x01.bak  Sender_block_0x01.dwg  Введение_0x01.docx  Список_использованных_источников_0x01.docx  Справка о патентном поиске.docx  ТЗ_0x01.docx  Титульник_0x01.docx
DRAFT_2/: 1_Сравнительный_анализ_аналогичных_систем_(устройств)_0x02.docx  2_обоснование_технических_требований_ведомственной_сети_0x02.docx  3_обоснование_сети_0x02.docx  4_обоснование_алгоритма_0x01.docx  5_экономика_0x02.docx  6_Заключение.docx  7_Список_использованных_источников_0x02.docx  APP_J_Листинг_кода_0x02.docx  Network.bak  Network.dwg  Network_0x02.bak  Network_0x02.dwg  Reveiver_block_0x02.bak  Reveiver_block_0x02.dwg  Sender_block_0x02.bak  Sender_block_0x02.dwg  _0_Титульник.docx  _1_ТЗ_0x02.docx  _2_Содержание_0x02.docx  _3_Введение_0x02.docx  __COMPILATION_0x02.docx  acad.err
DRAFT_3/: APP_A_Справка о патентном поиске_0x03.docx  Network_0x03.bak  Network_0x03.dwg  Reveiver_block_0x03.bak  Reveiver_block_0x03.dwg  Sender_block_0x03.bak  __COMPILATION_0x03.docx
DRAFT_4/: APP_A_Справка о патентном поиске_0x03.docx  APP_B_Листинг_кода_0x04.docx  Network_0x04.bak  Network_0x04.dwg  RECH_0x04.docx  Reveiver_block_0x04.bak  Reveiver_block_0x04.dwg  Sender_block_0x03.dwg  Sender_block_0x04.bak  Sender_block_0x04.dwg  (+1 more)
Program/: CMakeLists.txt  ReadMe.md  config_example.json
Program/src/: main.cpp
Program/src/config/: storage.hpp
Program/src/config/type/: fs_watcher.cpp  fs_watcher.hpp  udp_receiver.cpp  udp_receiver.hpp  udp_sender.cpp  udp_sender.hpp
Program/src/helpers/: file_scheduler.hpp  serialization.cpp  serialization.hpp  to.hpp  winfix.cpp  winfix.hpp
Program/src/models/: file_frame.cpp  file_frame.hpp  file_on_disk.hpp  idempotency_token.cpp  idempotency_token.hpp  udp_buffer.cpp  udp_buffer.hpp  udp_frame_queue.cpp  udp_frame_queue.hpp
Program/src/modules/: asio_job_queue.cpp  asio_job_queue.hpp  asio_thread_pool.cpp  asio_thread_pool.hpp  configuration_storage.hpp  file_scheduler.cpp  file_scheduler.hpp  file_system_watcher.hpp  fs_watcher.cpp  fs_watcher.hpp
Program/src/networking/: sender.cpp  sender.hpp  udp_receiver.cpp  udp_receiver.hpp  udp_sender.cpp  udp_sender.hpp
Program/src/utils/: Logging.hpp  calculate_hash.cpp  calculate_hash.hpp  call_each.hpp  sha256.cpp  sha256.h
Program/test_snippets/: pow_file_watcher.cpp  pow_send_receive.cpp  pow_serialization.cpp
(+45 files in other folders)
